tests/negative/parser_bad1.sp
(* ISSUE WITH OPEN COMMENT

b : int where b > 1000000000000000000000000000000000000000 = -1;

main : int () {
    return 0;
}